Actions
Bug #11588
closedloader: isapnp.c: this statement may fall through
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with warnings enabled:
../../common/isapnp.c: In function 'isapnp_scan_resdata': ../../common/isapnp.c:177:7: error: this statement may fall through [-Werror=implicit-fallthrough=] 177 | pnp_addident(pi, pnp_eisaformat(resinfo)); | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ../../common/isapnp.c:179:17: note: here 179 | case END_TAG: | ^~~~ cc1: all warnings being treated as errors
Updated by Electric Monk almost 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit c79df70e7f04e3742087189b820b431059193dfe
commit c79df70e7f04e3742087189b820b431059193dfe Author: Toomas Soome <tsoome@me.com> Date: 2019-09-20T19:30:58.000Z 11588 loader: isapnp.c: this statement may fall through Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Garrett D'Amore <garrett@damore.org>
Actions